# llm-playground

./: .gitignore  CLAUDE.md  README.md
.githooks/: pre-push
projects/context-inspector/: PRD.md  app.py  pyproject.toml
projects/memory-chat/: PRD.md  TECH_SPEC.md  TODO.md  app.py
projects/memory-chat-persistent/: PRD.md  TECH_SPEC.md  TODO.md  app.py  pyproject.toml
projects/memory-chat-persistent/tests/: test_providers.py
projects/memory-chat-tools/: PRD.md  TECH_SPEC.md  TODO.md  app.py  main.py  pyproject.toml
projects/memory-chat-tools/tests/: test_tool.py
